# Vacant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX_JOURNAL.md  CODEX_QUEUE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  alembic.ini  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  defense_gap.yml  feature.yml  theory_inconsistency.yml
.github/workflows/: ci.yml  conventional-commits.yml  docs.yml  labeler.yml  manifest-validation.yml  publish.yml  release-please.yml
COMMUNITY_STANDARDS/: index.html
CONVENTIONAL_COMMITS/: index.html
DEMO_RECORDING_SCRIPT/: index.html
DEMO_SCRIPT/: index.html
DEPLOY_PUBLIC/: index.html
GOOD_FIRST_ISSUES/: index.html
INTEGRATION/: index.html
INTEGRATION.zh-TW/: index.html
JOIN_NETWORK/: index.html
LAUNCH_DRAFTS/: index.html
PFIX3_PLAN/: index.html
PUBLISH/: index.html
RUNBOOK/: index.html
SUBMISSIONS/: index.html
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_p4_tables.py  0002_event_actor_seq_unique.py
api/: index.html
api/cli/: index.html
api/composite/: index.html
api/core/: index.html
api/identity/: index.html
api/mvp/: index.html
api/protocol/: index.html
api/registry/: index.html
api/reputation/: index.html
api/runtime/: index.html
api/substrate/: index.html
architecture/: ARCHITECTURE.md  BRIEFING.md  CONSTANTS.md  ENFORCEMENT_POINTS.md  FAQ.md  THEORY_V3.md  THEORY_V4.md  THEORY_V5.md
architecture/components/: P1_runtime.md  P2_identity.md  P3_reputation.md  P4_registry.md  P5_composite.md  P6_protocol.md  P7_mvp.md
architecture/decisions/: D001_hibernation_and_stale_revival.md  D002_p0_bootstrap_constants.md  D003_p1_runtime_reconciliation.md  D004_p2_identity_reconciliation.md  D005_padv_p2_findings.md  D006_p4_registry_reconciliation.md  D007_padv_p4_findings.md  D008_p3_reputation_reconciliation.md  D009_p6_protocol_reconciliation.md  D010_padv_p3_findings.md  D011_padv_p6_findings.md  D012_p5_composite_reconciliation.md  D013_padv_p5_findings.md  D014_p7_mvp_reconciliation.md  D015_codex_review_2026_05_06.md  D016_federation_root_rotation_history.md  D017_client_inherited_substrate.md
architecture/research/: P2_identity_research.md  P4_registry_research.md  T1_behavioral_fingerprint.md  T2_distillation.md  T3_substrate_economics.md  T4_attestation_bootstrap.md  T5_same_controller.md  T6_substrate_identity.md  T7_economics.md
architecture/tasks/: P1.md  P2.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8.md
dispatch/: HOW_TO_DISPATCH.md  MASTER.md  P0_bootstrap.md  P1_runtime.md  P2_identity.md  P3_reputation.md  P4_registry.md  P5_composite.md  P6_protocol.md  P7_demo_seed.md  P7_mvp.md  Padv_review.md  Pfix2_codex_round2.md  README.md
docs/: COMMUNITY_STANDARDS.md  CONVENTIONAL_COMMITS.md  DEMO_RECORDING_SCRIPT.md  DEMO_SCRIPT.md  DEPLOY_PUBLIC.md  GOOD_FIRST_ISSUES.md  INTEGRATION.md  INTEGRATION.zh-TW.md  JOIN_NETWORK.md  LAUNCH_DRAFTS.md  PFIX3_PLAN.md  PREREG_V2.md  PUBLISH.md  RECORD_SPEC.md  REFACTOR_BLUEPRINT.md  RUNBOOK.md  SUBMISSIONS.md  index.md  known-nodes.json
docs/api/: cli.md  composite.md  core.md  identity.md  index.md  mvp.md  protocol.md  registry.md  reputation.md  runtime.md  substrate.md
docs/explain/: architecture.md  briefing.md  constants.md  faq.md  theory.md
examples/: README.md  acp_a2a_test.py  b_layer.py  demo_trust.py  diag.py  exp_compose.py  exp_small.py  exp_value.py  p1_probe.py  run_hermes.py  speedprobe.py  verify_hermes.py  verify_product.py  x1_pilot.py
examples/agent/: README.md  route.py
examples/claude-desktop/: README.md
examples/cursor/: README.md  mcp.json
examples/hermes/: README.md  hermes_mcp.toml
examples/openclaw/: .mcp.json  README.md
examples/windsurf/: README.md
explain/architecture/: index.html
explain/faq/: index.html
overrides/: main.html
search/: search_index.json
tests/: conftest.py  test_agent.py  test_attest.py  test_blayer.py  test_brains_auth.py  test_checkpoint.py  test_checks.py  test_cli_eco.py  test_cli_run.py  test_codebench.py  test_composer.py  test_controller.py  test_credit_memory.py  test_dashboard.py  test_ecosystem.py  test_evalplus_loader.py  test_gateway.py  test_hardening.py  test_mcp_v2.py  test_packaging.py  test_primitives.py  test_receipt.py  test_record.py  test_research.py  test_revive.py  test_substrate_lmstudio.py  test_teeth.py  test_trace.py  test_w1_experiment.py  test_x1_evalplus.py
vacant/: __init__.py  agent.py  atomic.py  attest.py  auditor.py  batch.py  blayer.py  body.py  brains.py  canonical.py  checkpoint.py  checks.py  cli.py  codebench.py  composer.py  controller.py  crypto.py  dashboard.py  ecosystem.py  envelope.py  experiment.py  gateway.py  hermes_substrate.py  host.py  identity.py  logbook.py  mcp_server.py  mcp_trace.py  memory.py  openai_substrate.py  receipt.py  record.py  registry.py  reputation.py  research.py  router.py  substrate.py  tasks.py  trustcard.py  verifier.py  (+2 more)
(+249 files in other folders)
