[project]
name = "vacant"
version = "0.1.0"
description = "Vacant — 站在 AI agent『之間那條線』上的信任層。Phase 1：信任 + 持久/復活（可究責、可依信譽路由、專家可被復活再呼叫）。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vacant = "vacant.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vacant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
