[project]
name = "vacant"
version = "0.1.0"
description = "Vacant-first trust and verification gateway for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "mcp>=1.26,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vacant = "vacant.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vacant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
